<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuIniciarSesion">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroundapp" />

    <Button
        android:id="@+id/btnInicioSesion2"
        android:layout_width="258dp"
        android:layout_height="73dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="#F44336"
        android:hint="@string/btnInicioSesion"
        android:onClick="iniciarSesion"
        android:textColorHint="#FFFDFD"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInicioSesion3"
        android:layout_width="258dp"
        android:layout_height="73dp"
        android:layout_marginTop="624dp"
        android:backgroundTint="#F44336"
        android:hint="@string/btnInicioSesionAnonimo"
        android:onClick="InicioAnonimo"
        android:textColorHint="#FFFDFD"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="148dp"
        android:layout_marginTop="312dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/edtUsuario"
            android:inputType="textPersonName"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/edtContra"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:ems="10"
            android:hint="@string/edtContra"
            android:inputType="textPassword" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnAtras2"
        android:layout_width="55dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#F44336"
        android:onClick="Volver2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/txtIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:hint="@string/txtIniciarSesion"
        android:textColorHint="#FAF9F9"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>